# R3DVoxel

./: .gitignore  CMakeLists.txt  R3DVoxel.sln  README.md
.github/workflows/: build.yml  msbuild.yml
R3DEngine/Include/ui/: Watcher.h
R3DEngine/Include/world/: GameObject.h
R3DVoxel/: Application.cpp  R3DVoxel.vcxproj  R3DVoxel.vcxproj.filters  imgui.ini
R3DVoxel/VoxelEngine/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  TerrainGenerator.cpp  TerrainGenerator.h  Voxel.h
R3DVoxel/assets/shaders/: no_texture_shader.spv
assets/shaders/: light_source.spv  vert.spv
